<resources>
    <string name="app_name">Local Cricket Score Calculator</string>
    <string name="app_name1">Local Cricket Score Calculator</string>
    <string name="add_match">Add Match/Saved matches</string>
    <string name="drawer_new_match">New match</string>
    <string name="drawer_save_matches">Saved matches</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_rate_us">Rate Us</string>
    <string name="drawer_about_the_apps">About the app</string>
    <string name="communicate">Communicate</string>
    <string name="drawer_notification_settings">Notification Settings</string>
    <string name="drawer_exit">Exit</string>
    <string name="nav_home">Home</string>
    <string name="nav_team1">Team1</string>
    <string name="nav_team2">Team2</string>
    <string name="nav_profile">Profile</string>
    <string name="action_settings">Action Settings</string>
    <string name="my_email">smilesifat@gmail.com</string>
    <string name="drawer_update_matches">Update Mathes</string>
    <string name="navigation_drawer_open">Navigation Drawer open</string>
    <string name="navigation_drawer_close">Navigation Drawer close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="run">Team1</string>
    <string name="over">Overs:</string>
    <string name="runrate">Runrate</string>
    <string name="ball_by_ball">Ball By Ball</string>
    <string name="Run">TextView</string>
    <string name="Over">TextView</string>
    <string name="runbyball">TextView</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="undo">Undo</string>
    <string name="zero">0</string>
    <string name="four">Four</string>
    <string name="six">Six</string>
    <string name="out">out</string>
    <string name="wide">wide</string>
    <string name="bye">bye</string>
    <string name="legby">legby</string>
    <string name="noball">noball</string>
    <string name="players">Players</string>
    <string name="R">R</string>
    <string name="p4">4s</string>
    <string name="B">B</string>
    <string name="p6">6s</string>
    <string name="sr">SR</string>
    <string name="R1">R1</string>
    <string name="p41">4s1</string>
    <string name="B1">B1</string>
    <string name="p61">6s1</string>
    <string name="sr1">SR1</string>
    <string name="player1">Player1</string>
    <string name="R2">R2</string>
    <string name="p42">4s2</string>
    <string name="B2">B2</string>
    <string name="p62">6s2</string>
    <string name="sr2">SR2</string>
    <string name="player2">Player2</string>
    <string name="previousOver">Previous Over</string>
    <string name="economy">Economy</string>
    <string name="oneRun">1</string>
    <string name="twoRun">2</string>
    <string name="threeRun">3</string>
    <string name="fourRun">4</string>
    <string name="sixRun">6</string>
    <string name="wkt">W</string>
    <string name="wideBall">Wide</string>
    <string name="noBall">No</string>
    <string name="drawer_my_profile">My Profile</string>
    <string name="amp"><![CDATA[&]]></string>
</resources>
