<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreCounter">

  <include
      android:id="@+id/toolbar"
      layout="@layout/toolbar"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:orientation="vertical"
      android:weightSum="8">
    <TextView
        android:id="@+id/setTeam_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="5dp"
        android:background="#43A047"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_weight="1"
        android:text="Team A"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:orientation="horizontal">
        <TextView
            android:id="@+id/show_team_1_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="0"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/show_team_1_wicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:textStyle="bold"
            android:text="0"
            android:textSize="40sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Runs"
            android:textSize="25sp" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/show_team_1_overs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textSize="40sp" />

        <TextView
            android:id="@+id/show_team_1_balls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="0"
            android:textSize="40sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Overs"
            android:textSize="25sp" />

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:background="#F7D02C"
        android:orientation="horizontal"
        android:weightSum="4">

      <TextView
          android:id="@+id/textViewRunRate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:textAlignment="center"
          android:background="#CF4315"
          android:padding="5dp"
          android:text="@string/runrate"
          android:textColor="#fff"
          android:textSize="16sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/show_run_rate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:layout_weight="1"
          android:textStyle="bold"
          android:text="0.00"
          android:textSize="20sp" />
      <TextView
          android:id="@+id/textViewEconomy"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:background="#0D1752"
          android:padding="5dp"
          android:text="@string/economy"
          android:textAlignment="center"
          android:textColor="#fff"
          android:textSize="16sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/show_economy"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:textAlignment="center"
          android:layout_weight="1"
          android:text="0.00"
          android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/textViewpreviousOver"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAlignment="textEnd"
          android:background="#C92216"
          android:textColor="#fff"
          android:padding="5dp"
          android:paddingStart="5dp"
          android:textStyle="bold"
          android:textSize="16sp"
          android:text="@string/previousOver"
          tools:ignore="RtlSymmetry" />

      <HorizontalScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">
        <TextView
            android:id="@+id/textViewBallByBall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

      </HorizontalScrollView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="3"
        android:layout_marginTop="6dp"
        android:padding="3dp"
        android:background="#FDFCFC"
        android:gravity="center"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_weight="1"
          android:weightSum="4">

        <Button
            android:id="@+id/ButtonOne"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#4E4B4B"
            android:padding="5dp"
            android:text="@string/one"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/ButtonTwo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#5A5858"
            android:padding="5dp"
            android:text="@string/two"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/ButtonThree"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#5A5858"
            android:padding="5dp"
            android:text="@string/three"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/ButtonZero"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#5A5858"
            android:padding="5dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:weightSum="4"
          android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonWide"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#103E68"
            android:padding="5dp"
            android:text="@string/wide"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/ButtonFour"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#00897B"
            android:padding="5dp"

            android:text="@string/four"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/ButtonSix"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#E53935"
            android:padding="5dp"
            android:text="@string/six"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/ButtonBye"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#704105"
            android:padding="5dp"
            android:text="@string/bye"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold|italic"
            tools:ignore="ButtonStyle" />


      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:weightSum="3"
          android:orientation="horizontal">
        <Button
            android:id="@+id/ButtonLegBy"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#482A7E"
            android:padding="5dp"
            android:text="@string/legby"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/ButtonOut"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#B91104"
            android:text="@string/out"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
        <Button
            android:id="@+id/ButtonNoBall"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0.3dp"
            android:layout_weight="1"
            android:background="#925C4A"
            android:padding="5dp"
            android:text="@string/noball"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

      </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
      <Button
          android:id="@+id/Next_Team_Score"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_margin="3dp"
          android:layout_weight="1"
          android:background="@drawable/next"
          android:text="Next Team"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="28sp"
          android:textStyle="bold|italic"
          tools:ignore="ButtonStyle" />
      <Button
          android:id="@+id/Finish_Score"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:layout_margin="3dp"
          android:layout_weight="1"
          android:background="@drawable/calculate_offline_background"
          android:text="Finish"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="28sp"
          android:textStyle="bold|italic"
          tools:ignore="ButtonStyle" />

    </LinearLayout>
  </LinearLayout>
</LinearLayout>